feat: add html structure for fight

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 </head>
 
 <body>
+
+    <header id="fight-section">
+        <div class="container">
+            <div class="tool-bar-container">
+                <div class="main"><a href="#">Main</a></div>
+                <div class="tool-bar">
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                            alt="user"></a>
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                            alt="settings"></a>
+                </div>
+            </div>
+            <div class="fight-container">
+                <div class="div-fight">
+                    <button class="fight">Fight!</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="register">
         <div class="register__name">Create Your Character</div>
         <div class="input">
