feat: update html

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
         </div>
     </header>
 
-    <div class="register">
+    <div class="register" id="create-section">
         <div class="register__name">Create Your Character</div>
         <div class="input">
             <label for="character-name">Character Name</label>
             <input class="input-name" type="text" name="" id="character-name">
         </div>
-        <button class="button-create">Create Character</button>
+        <button class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
