--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="main"><a href="#">Main</a></div>
                 <div class="tool-bar">
                     <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
-                            alt="user"></a>
+                    <a href="#" onclick="toCharacter()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
                     <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
                             alt="settings"></a>
                 </div>
@@ -25,6 +25,37 @@
             <div class="fight-container">
                 <div class="div-fight">
                     <button class="fight">Fight!</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <header id="character-section">
+        <div class="container">
+            <div class="tool-bar-container">
+                <div class="main"><a href="#">Character</a></div>
+                <div class="tool-bar">
+                    <a href="#" onclick="toFight()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                            alt="user"></a>
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                            alt="settings"></a>
+                </div>
+            </div>
+            <div class="character-container">
+                <div class="character-info">
+                    <div class="avatar-image">
+                        <img src="https://turn-them-all-down.vercel.app/assets/avatars/default.jpg"
+                            alt="default avatar">
+                    </div>
+                    <div class="avatar-data">
+                        <div class="avatar-data--name">xc</div>
+                        <div class="avatar-result">
+                            <span class="avatar-result-wins">Wins: 0</span>
+                            <span class="avatar-result-loses">Loses: 0</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
