feat: update html and script for receiving name of character

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             alt="default avatar">
                     </div>
                     <div class="avatar-data">
-                        <div class="avatar-data--name">xc</div>
+                        <div class="avatar-data-name" id="avatar-name"></div>
                         <div class="avatar-result">
                             <span class="avatar-result-wins">Wins: 0</span>
                             <span class="avatar-result-loses">Loses: 0</span>
@@ -65,7 +65,7 @@
         <div class="register__name">Create Your Character</div>
         <div class="input">
             <label for="character-name">Character Name</label>
-            <input class="input-name" type="text" name="" id="character-name">
+            <input class="input-name"  type="text" name="name" value="" id="character-name">
         </div>
         <button class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
     </div>
