feat: update html, styles, script for settings

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
                     <a href="#" onclick="toCharacter()"><img
                             src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
-                            alt="settings"></a>
+                    <a href="#" onclick="toSettings()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings"></a>
                 </div>
             </div>
             <div class="fight-container">
@@ -39,14 +39,15 @@
                             src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
                     <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
                             alt="user"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
-                            alt="settings"></a>
+                    <a href="#" onclick="toSettings()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings"></a>
                 </div>
             </div>
             <div class="character-container">
                 <div class="character-info">
                     <div class="avatar-image">
-                        <img id="image-character" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7q_o5-hbH4-K9xLQAretQQIFB_onrALKW-w&s"
+                        <img id="image-character"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7q_o5-hbH4-K9xLQAretQQIFB_onrALKW-w&s"
                             alt="default avatar" onmouseenter="editCharacter()" onmouseout="closeEditCharacter()">
                         <div id="edit-character" class="edit-character">
                             <button class="edit-character-btn" onclick="openEditModal()">
@@ -67,6 +68,37 @@
         </div>
     </header>
 
+
+    <header id="settings-section">
+        <div class="container">
+            <div class="tool-bar-container">
+                <div class="main"><a href="#">Settings</a></div>
+                <div class="tool-bar">
+                    <a href="#" onclick="toFight()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
+                    <a href="#" onclick="toCharacter()"><img
+                            src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
+                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                            alt="settings"></a>
+                </div>
+            </div>
+            <div class="change-name-container">
+                <div class="change-name" id="change-name">
+                    <span class="name">
+                        Player Name:
+                    </span>
+                    <span id="name-for-avatar"></span>
+                    <button class="edit-name-btn" onclick="editNameAvatar()">Edit</button>
+                    <div class="input-name-avatar" id="input-name-avatar">
+                        <input type="text" name="name" id="input-name">
+                        <button class="edit-name-btn btn-save" onclick="saveNameAvatar()">Save</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
     <div id="popup" class="popup-container">
         <div class="avatar-popup">
             <img class="close-modal" src="https://turn-them-all-down.vercel.app/assets/icons/close.svg"
@@ -79,7 +111,7 @@
                     <div class="avatar-edit">
                         <button class="avatar-edit-btn" onclick="setAvatar(this)">
                             <img src="https://turn-them-all-down.vercel.app/assets/icons/check_circle.svg"
-                                alt="choose avatar" >
+                                alt="choose avatar">
                         </button>
                     </div>
                 </div>
@@ -90,7 +122,7 @@
                     <div class="avatar-edit">
                         <button class="avatar-edit-btn" onclick="setAvatar(this)">
                             <img src="https://turn-them-all-down.vercel.app/assets/icons/check_circle.svg"
-                                alt="choose avatar" >
+                                alt="choose avatar">
                         </button>
                     </div>
                 </div>
@@ -101,7 +133,7 @@
                     <div class="avatar-edit">
                         <button class="avatar-edit-btn" onclick="setAvatar(this)">
                             <img src="https://turn-them-all-down.vercel.app/assets/icons/check_circle.svg"
-                                alt="choose avatar" >
+                                alt="choose avatar">
                         </button>
                     </div>
                 </div>
@@ -123,9 +155,9 @@
         <div class="register__name">Create Your Character</div>
         <div class="input">
             <label for="character-name">Character Name</label>
-            <input class="input-name" type="text" name="name" value="" id="character-name">
+            <input class="input-name" type="text" name="name" value="" id="character-name" required>
         </div>
-        <button class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
+        <button  class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
     </div>
 
     <script src="script.js"></script>
