--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Main</a></div>
                 <div class="tool-bar">
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="#" onclick="toCharacter()"><img
+                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
+                    <a href="" onclick="toCharacter()"><img
                             src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
                             alt="settings"></a>
                 </div>
             </div>
@@ -35,11 +35,11 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Character</a></div>
                 <div class="tool-bar">
-                    <a href="#" onclick="toFight()"><img
+                    <a href="" onclick="toFight()"><img
                             src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
                             alt="user"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
                             alt="settings"></a>
                 </div>
             </div>
