--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Main</a></div>
                 <div class="tool-bar">
-                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="" onclick="toCharacter()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
-                    <a href="#" onclick="toSettings()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings"></a>
+                    <img src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home">
+                    <img onclick="toCharacter()" src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                        alt="user">
+                    <img onclick="toSettings()" src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                        alt="settings">
                 </div>
             </div>
             <div class="fight-container">
@@ -157,7 +157,7 @@
             <label for="character-name">Character Name</label>
             <input class="input-name" type="text" name="name" value="" id="character-name" required>
         </div>
-        <button  class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
+        <button class="button-create" id="btn-create" onclick="toFight()">Create Character</button>
     </div>
 
     <div id="battle-section">
@@ -252,9 +252,9 @@
                         </div>
                     </div>
                 </div>
-           <div class="battle-logs">
+                <div class="battle-logs">
 
-           </div>
+                </div>
             </div>
         </div>
     </div>
