feat:: update html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Character</a></div>
                 <div class="tool-bar">
-                    <a href="" onclick="toFight()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href=""><img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
-                            alt="user"></a>
-                    <a href="#" onclick="toSettings()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings"></a>
+                    <img onclick="toFight()" src="https://turn-them-all-down.vercel.app/assets/icons/home.svg"
+                        alt="Home">
+                    <img src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user">
+                    <img onclick="toSettings()" src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                        alt="settings">
                 </div>
             </div>
             <div class="character-container">
@@ -74,12 +73,11 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Settings</a></div>
                 <div class="tool-bar">
-                    <a href="#" onclick="toFight()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="#" onclick="toCharacter()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
-                    <a href="#"><img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
-                            alt="settings"></a>
+                    <img onclick="toFight()" src="https://turn-them-all-down.vercel.app/assets/icons/home.svg"
+                        alt="Home">
+                    <img onclick="toCharacter()" src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                        alt="user">
+                    <img src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings">
                 </div>
             </div>
             <div class="change-name-container">
@@ -165,12 +163,12 @@
             <div class="tool-bar-container">
                 <div class="main"><a href="#">Battle</a></div>
                 <div class="tool-bar">
-                    <a href="#" onclick="toFight()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/home.svg" alt="Home"></a>
-                    <a href="#" onclick="toCharacter()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/character.svg" alt="user"></a>
-                    <a href="#" onclick="toSettings()"><img
-                            src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg" alt="settings"></a>
+                    <img onclick="toFight()" src="https://turn-them-all-down.vercel.app/assets/icons/home.svg"
+                        alt="Home">
+                    <img onclick="toCharacter()" src="https://turn-them-all-down.vercel.app/assets/icons/character.svg"
+                        alt="user">
+                    <img onclick="toSettings()" src="https://turn-them-all-down.vercel.app/assets/icons/settings.svg"
+                        alt="settings">
                 </div>
             </div>
             <div class="battle-container">
